<resources>
    <string name="app_name">Hackathon App1</string>
    <string name="title_home">Appointments</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Prescriptions</string>
    <string name="notes">Notes</string>
    <string name="select">Click on the page you want to view:</string>
    <string name="upcoming_reminders">Upcoming Reminders:</string>
    <string name="reminder_1">- Reminder 1</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="appointments">Appointments</string>
    <string name="reminders">Reminders</string>
    <string name="welcome">Welcome</string>
    <string name="reminder1">Reminder 1</string>
</resources>